# IRIS_SW

./: camera_stream.py
Source Code/MotorController/: CMakeLists.txt  motorcontroller.cpp  package.xml
Source Code/TerminalInputNode/: CMakeLists.txt  package.xml  terminalinputnode.cpp
docker_humble_raspi/: Dockerfile
src/camera_node/: CMakeLists.txt  package.xml
src/camera_node/src/: camera_node  camera_node.cpp
src/motor_controller/: CMakeLists.txt  package.xml
src/motor_controller/msg/: MotorCommand.msg
src/motor_controller/src/: motor_controller.cpp  motor_controller.h
src/serial/: CMakeLists.txt
src/serial_communication/: CMakeLists.txt  package.xml
src/serial_communication/src/: serial_comm_node.cpp
src/terminal_input/: CMakeLists.txt  package.xml
src/terminal_input/src/: keyboard_command_interface.cpp  keyboard_command_interface.h  terminal_command_interface.cpp  terminal_command_interface.h
