<?xml version="1.0"?>
<package format="3">
  <name>terminal_input_node</name>
  <version>0.0.1</version>
  <description>User input terminal reading ROS 2 Node</description>
  <maintainer email="ilyas.asmouki@epfl.ch">Ilyas Asmouki</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
