<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_communication</name>
  <version>0.0.0</version>
  <description>ROS 2 package for Serial Communication</description>
  <maintainer email="ilyas.asmouki@epfl.ch">Ilyas Asmouki</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- System Dependencies
  Please ensure you have the following system dependencies installed to build and run this package:

  - libserial-dev: Required for serial communication. Install using `sudo apt-get install libserial-dev` on Ubuntu-based systems.
  -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
